Fix weird spacing on back quotes on markdown

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -590,7 +590,7 @@ code:after,
 tt:before,
 tt:after {
   letter-spacing: -0.2em;
-  content: " ";
+
 }
 pre code:before,
 pre code:after,
